// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`populator succeeds for fixed iteration 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [],
      "repeater": {
        "alias": undefined,
        "max": 5,
        "min": 5,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator succeeds for nested iterations 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "kind": "field",
              "name": "id",
              "namePath": [
                "org",
                "id",
              ],
              "refKey": "Org.id",
            },
          ],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [
        {
          "actions": [
            {
              "alias": "repo",
              "changeset": [
                {
                  "name": "org_id",
                  "setter": {
                    "kind": "reference-value",
                    "target": {
                      "access": [
                        "id",
                      ],
                      "alias": "org",
                    },
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "setter": {
                    "kind": "literal",
                    "type": "text",
                    "value": "test name",
                  },
                },
              ],
              "kind": "create-one",
              "model": "Repo",
              "select": [],
              "targetPath": [
                "repo",
              ],
            },
          ],
          "name": "repos",
          "populates": [],
          "repeater": {
            "alias": undefined,
            "max": 2000,
            "min": 20,
          },
          "target": {
            "alias": "repo",
            "identifyWith": {
              "name": "id",
              "paramName": "repo_id",
              "refKey": "Repo.id",
              "type": "integer",
            },
            "kind": "relation",
            "name": "repos",
            "namePath": [
              "Org",
              "repos",
            ],
            "refKey": "Org.repos",
            "retType": "Repo",
          },
        },
      ],
      "repeater": {
        "alias": undefined,
        "max": 4,
        "min": 4,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator succeeds for nested populators 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "kind": "field",
              "name": "id",
              "namePath": [
                "org",
                "id",
              ],
              "refKey": "Org.id",
            },
          ],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [
        {
          "actions": [
            {
              "alias": "repo",
              "changeset": [
                {
                  "name": "org_id",
                  "setter": {
                    "kind": "reference-value",
                    "target": {
                      "access": [
                        "id",
                      ],
                      "alias": "org",
                    },
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "setter": {
                    "kind": "literal",
                    "type": "text",
                    "value": "test name",
                  },
                },
              ],
              "kind": "create-one",
              "model": "Repo",
              "select": [
                {
                  "alias": "id",
                  "kind": "field",
                  "name": "id",
                  "namePath": [
                    "repo",
                    "id",
                  ],
                  "refKey": "Repo.id",
                },
              ],
              "targetPath": [
                "repo",
              ],
            },
          ],
          "name": "Repos",
          "populates": [
            {
              "actions": [
                {
                  "alias": "issue",
                  "changeset": [
                    {
                      "name": "org_id",
                      "setter": {
                        "fieldsetAccess": [
                          "org_id",
                        ],
                        "kind": "fieldset-input",
                        "required": true,
                        "type": "integer",
                      },
                    },
                    {
                      "name": "repo_id",
                      "setter": {
                        "kind": "reference-value",
                        "target": {
                          "access": [
                            "id",
                          ],
                          "alias": "repo",
                        },
                        "type": "integer",
                      },
                    },
                    {
                      "name": "title",
                      "setter": {
                        "kind": "literal",
                        "type": "text",
                        "value": "test title",
                      },
                    },
                  ],
                  "kind": "create-one",
                  "model": "Issue",
                  "select": [],
                  "targetPath": [
                    "issue",
                  ],
                },
              ],
              "name": "Issues",
              "populates": [],
              "repeater": {
                "max": 1,
                "min": 1,
              },
              "target": {
                "alias": "issue",
                "identifyWith": {
                  "name": "id",
                  "paramName": "issue_id",
                  "refKey": "Issue.id",
                  "type": "integer",
                },
                "kind": "relation",
                "name": "issues",
                "namePath": [
                  "Org",
                  "repos",
                  "issues",
                ],
                "refKey": "Repo.issues",
                "retType": "Issue",
              },
            },
          ],
          "repeater": {
            "max": 1,
            "min": 1,
          },
          "target": {
            "alias": "repo",
            "identifyWith": {
              "name": "id",
              "paramName": "repo_id",
              "refKey": "Repo.id",
              "type": "integer",
            },
            "kind": "relation",
            "name": "repos",
            "namePath": [
              "Org",
              "repos",
            ],
            "refKey": "Org.repos",
            "retType": "Repo",
          },
        },
      ],
      "repeater": {
        "max": 1,
        "min": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator succeeds for range iteration (only max) 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [],
      "repeater": {
        "alias": undefined,
        "max": 3,
        "min": 3,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator succeeds for range iteration 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [],
      "repeater": {
        "alias": undefined,
        "max": 3,
        "min": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator succeeds for simple populator 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "type": "boolean",
                "value": true,
              },
            },
            {
              "name": "name",
              "setter": {
                "kind": "literal",
                "type": "text",
                "value": "test name",
              },
            },
          ],
          "kind": "create-one",
          "model": "Org",
          "select": [],
          "targetPath": [
            "org",
          ],
        },
      ],
      "name": "Orgs",
      "populates": [],
      "repeater": {
        "max": 1,
        "min": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
}
`;
